# NLRanalyzer

./: Cargo.toml  README.md
python/: locateNLR.py  prgdbSequencefetcher.py  resistanceminer.py
src/: args.rs  locatenlr.rs  main.rs  resistancealignment.rs  resistancedeep.rs  resistancefetcher.rs  resistanceminer.rs
