[package]
name = "NLRanalyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.17"
regex = "1.10"
anyhow = "1.0"
linfa = "0.8.0"
ndarray = "0.16.1"
rayon = "1.11.0"
tch = "0.22.0"
